# poc-flask-smorest

./: README.md  openapi.json  pyproject.toml
src/: app.py
src/entities/: author.py  post.py
src/repositories/: authors_repository.py  posts_repository.py
src/routes/: authors.py  posts.py
src/routes/dto/authors/: create_author_dto.py  delete_author_dto.py  get_author_dto.py  list_authors_dto.py  update_author_dto.py
src/routes/dto/posts/: create_post_dto.py  list_posts_dto.py
src/services/: authors_service.py  posts_service.py
