[tool.poetry]
name = "poc-flask-smorest"
version = "0.1.0"
description = "POC with flask-smorest"
authors = ["Pedro Dalvy <pedrodalvy@outlook.com>"]
readme = "README.md"

packages = [{ include = "src" }]

[tool.poetry.scripts]
start = "src.app:main"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-smorest = "^0.45.0"
marshmallow = "^3.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
